--- a/pom.xml
+++ b/pom.xml
@@ -26,12 +26,24 @@
   	<dependency>
   		<groupId>com.google.code.gson</groupId>
   		<artifactId>gson</artifactId>
-  		<version>2.8.2</version>
   	</dependency>
   	<dependency>
   		<groupId>com.github.taycaldwell</groupId>
   		<artifactId>riot-api-java</artifactId>
-  		<version>4.0.1</version>
   	</dependency>
   </dependencies>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>com.google.code.gson</groupId>
+  			<artifactId>gson</artifactId>
+  			<version>2.8.2</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>com.github.taycaldwell</groupId>
+  			<artifactId>riot-api-java</artifactId>
+  			<version>4.0.1</version>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
